style(Typebadge): Added media query class for big screens to make sure type badges are not too small

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -6243,6 +6243,18 @@ body {
     max-width: 350px;
     gap: 6px;
   }
+
+  .typeBadge.compact {
+    font-size: 16px;
+    height: 22px;
+    padding: 4px 10px;
+    gap: 5px;
+  }
+
+  .typeBadge.smallText {
+    font-size: 14px;
+    padding: 4px 8px;
+  }
   /*SEARCHBAR END*/
 
   .pokemonGrid {
